Update website title

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Automation Practice",
-  "name": "Automation Practice",
+  "short_name": "Autobot",
+  "name": "Autobot",
   "icons": [
     {
       "src": "favicon.ico",
